# HexFF

./: .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: main-lint-test-deploy.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: config.rs  hex_data.rs  lib.rs  main.rs  string_encodings.rs  types.rs
src/components/: Types.ts
src/components/app/: ByteValueView.tsx  HexEditView.tsx  HexEditViewComponent.tsx  InputHex.tsx  TabbedFilesComponent.tsx  WindowTitle.tsx
src/components/app/DataInspectors/: ByteValueView.tsx  HexEditView.tsx  HexEditViewComponent.tsx  TextValueView.tsx
src/components/app/DataInspectors/Utilities.ts/: HexEditViewEvents.ts
src/components/app/Inputs/: InputHex.tsx
src/components/popups/: AboutPopup.tsx
src/context/: AntdThemeContext.tsx
src/hooks/: UseDataProps.tsx  UseDebounce.ts  UseTauriUpdater.tsx  UseWindowStateListener.tsx
src/localization/: Localization.ts
src/localization/en/: messages.json  ui.json
src/localization/fi/: messages.json  ui.json
src/menu/: AppMenu.tsx  AppToolbar.tsx  MenuItems.tsx  ToolbarItems.tsx
src/utilities/app/: Files.ts  Settings.ts  TauriWrappers.ts  UtilityTypes.ts
